[gd_scene load_steps=30 format=3 uid="uid://cjl7hh0kgvrb8"]

[ext_resource type="Script" path="res://scenes/main_scenes/Game.gd" id="1_7xsfy"]
[ext_resource type="PackedScene" uid="uid://dmtd1mxporvjw" path="res://scenes/environment/tower.tscn" id="2_dc8uo"]
[ext_resource type="PackedScene" uid="uid://dktse0vckd1qr" path="res://scenes/character/Head.tscn" id="3_84kx1"]
[ext_resource type="PackedScene" uid="uid://deoc0hgj85t7q" path="res://scenes/character/Pot.tscn" id="3_k12lq"]
[ext_resource type="Texture2D" uid="uid://dnn86dvj662yj" path="res://assets/image/hud/BarVinesProgress.png" id="6_vlg86"]
[ext_resource type="Texture2D" uid="uid://85qfkjlne24r" path="res://assets/image/hud/BarSunUnder.png" id="7_8lc2f"]
[ext_resource type="Texture2D" uid="uid://bmwo3c2dceiga" path="res://assets/image/hud/BarSun.png" id="8_al0vm"]
[ext_resource type="Texture2D" uid="uid://bsy6qum2c4ub5" path="res://assets/image/hud/BarLightning.png" id="9_kkmna"]
[ext_resource type="Texture2D" uid="uid://dr8bxndhr0tm5" path="res://assets/image/hud/BarSunProgress.png" id="9_xggyo"]
[ext_resource type="Texture2D" uid="uid://ca2w6exe7r1ed" path="res://assets/image/hud/BarLightningProgress.png" id="10_iut7u"]
[ext_resource type="Texture2D" uid="uid://do1nlubiugans" path="res://assets/image/hud/BarWindUnder.png" id="11_dw3tv"]
[ext_resource type="PackedScene" uid="uid://b574p0trbhj2o" path="res://scenes/menus/PauseMenu.tscn" id="11_swgty"]
[ext_resource type="Texture2D" uid="uid://oob82gi6ut36" path="res://assets/image/hud/BarWind.png" id="12_fsejr"]
[ext_resource type="Shader" path="res://shaders/WindScrollingNoise.gdshader" id="13_asiqk"]
[ext_resource type="Texture2D" uid="uid://chbnbpvg4p0wi" path="res://assets/image/hud/BarWindProgress.png" id="13_c3ak3"]
[ext_resource type="Texture2D" uid="uid://b834k37jve3s0" path="res://assets/image/hud/WindTexture.png" id="14_ubjmv"]
[ext_resource type="FontFile" uid="uid://07upkyw5b3yx" path="res://assets/font/PixelFont5x7.ttf" id="15_fcn5l"]
[ext_resource type="Script" path="res://scenes/stats/SpeedrunTimers.gd" id="17_3irkt"]
[ext_resource type="Shader" path="res://scenes/environment/pixelate.gdshader" id="17_o3jbk"]
[ext_resource type="Script" path="res://scenes/stats/TimeTracker.gd" id="18_ticvr"]
[ext_resource type="Script" path="res://scenes/stats/StatsUpdater.gd" id="19_4a02y"]

[sub_resource type="Environment" id="Environment_4vhcu"]
background_mode = 3
reflected_light_source = 1
glow_enabled = true
glow_intensity = 8.0
glow_strength = 1.12
glow_bloom = 0.25
glow_hdr_threshold = 0.75
glow_hdr_luminance_cap = 21.94

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fx6ct"]
shader = ExtResource("13_asiqk")
shader_parameter/windiness = 0.0
shader_parameter/scroll_speed = Vector2(-1.34, 0.36)
shader_parameter/windy_noise = ExtResource("14_ubjmv")

[sub_resource type="LabelSettings" id="LabelSettings_ul41i"]
font = ExtResource("15_fcn5l")
font_size = 64
font_color = Color(1, 1, 0.380392, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yh54b"]
font_size = 96
font_color = Color(1, 1, 0.607843, 1)
outline_color = Color(1, 1, 1, 0)

[sub_resource type="LabelSettings" id="LabelSettings_hlbhx"]
font_size = 96
font_color = Color(0.939112, 0.946974, 0.999999, 1)

[sub_resource type="LabelSettings" id="LabelSettings_os7sk"]
font_size = 96
font_color = Color(0.85, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_j8jmy"]
font_size = 96
font_color = Color(1, 0.921569, 0.882353, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v23c5"]
shader = ExtResource("17_o3jbk")
shader_parameter/quantize_size = 3.0
shader_parameter/handle_scale = true
shader_parameter/handle_subpixels = true

[node name="Game" type="Node2D" groups=["game"]]
process_mode = 1
script = ExtResource("1_7xsfy")

[node name="Lighting" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4vhcu")

[node name="Tower" parent="." instance=ExtResource("2_dc8uo")]

[node name="Pot" parent="." instance=ExtResource("3_k12lq")]
position = Vector2(0, 599)

[node name="Head" parent="." instance=ExtResource("3_84kx1")]
position = Vector2(0, 549)

[node name="CanvasLayer" type="CanvasLayer" parent="." groups=["ui"]]
layer = 2

[node name="WindBar" type="TextureProgressBar" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -119.575
offset_top = -54.0
offset_right = -39.575
offset_bottom = -38.0
grow_horizontal = 2
scale = Vector2(3, 3)
step = 0.0
texture_under = ExtResource("11_dw3tv")
texture_over = ExtResource("12_fsejr")
texture_progress = ExtResource("13_c3ak3")

[node name="LightningBar" type="TextureProgressBar" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -119.575
offset_top = -53.515
offset_right = -39.575
offset_bottom = -37.515
grow_horizontal = 2
scale = Vector2(3, 3)
step = 0.0
texture_under = ExtResource("7_8lc2f")
texture_over = ExtResource("9_kkmna")
texture_progress = ExtResource("10_iut7u")

[node name="SunBar" type="TextureProgressBar" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -119.575
offset_top = -54.0
offset_right = -39.575
offset_bottom = -38.0
grow_horizontal = 2
scale = Vector2(3, 3)
step = 0.0
texture_under = ExtResource("7_8lc2f")
texture_over = ExtResource("8_al0vm")
texture_progress = ExtResource("9_xggyo")

[node name="VinesBar" type="TextureProgressBar" parent="CanvasLayer" groups=["hud"]]
material = SubResource("ShaderMaterial_fx6ct")
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.04
offset_top = -54.0
offset_right = -40.04
offset_bottom = -38.0
grow_horizontal = 2
scale = Vector2(3, 3)
value = 100.0
texture_progress = ExtResource("6_vlg86")

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -6.5
offset_right = 20.0
offset_bottom = 6.5
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_ul41i")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.932333, 0.71, 0)
metadata/_edit_lock_ = true

[node name="SpeedrunTimers" type="Node2D" parent="CanvasLayer"]
position = Vector2(840.66, -22.33)
script = ExtResource("17_3irkt")

[node name="SunTime" type="Label" parent="CanvasLayer/SpeedrunTimers"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 59.1201
offset_top = 73.7
offset_right = 323.12
offset_bottom = 149.7
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
pivot_offset = Vector2(155, 38)
text = "20000.11"
label_settings = SubResource("LabelSettings_yh54b")
horizontal_alignment = 1
script = ExtResource("18_ticvr")
section_type = null

[node name="StormTime" type="Label" parent="CanvasLayer/SpeedrunTimers"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 59.1201
offset_top = 47.7
offset_right = 323.12
offset_bottom = 123.7
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
pivot_offset = Vector2(155, 38)
text = "20000.11"
label_settings = SubResource("LabelSettings_hlbhx")
horizontal_alignment = 1
script = ExtResource("18_ticvr")
section_type = 1

[node name="WindTime" type="Label" parent="CanvasLayer/SpeedrunTimers"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 59.1201
offset_top = 20.7
offset_right = 323.12
offset_bottom = 96.7
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
pivot_offset = Vector2(155, 38)
text = "20000.11"
label_settings = SubResource("LabelSettings_os7sk")
horizontal_alignment = 1
script = ExtResource("18_ticvr")
section_type = 2

[node name="PeacefulTime" type="Label" parent="CanvasLayer/SpeedrunTimers"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 59.1201
offset_top = -6.3
offset_right = 323.12
offset_bottom = 69.7
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
pivot_offset = Vector2(155, 38)
text = "20000.11"
label_settings = SubResource("LabelSettings_j8jmy")
horizontal_alignment = 1
script = ExtResource("18_ticvr")
section_type = 3

[node name="PauseMenu" parent="." instance=ExtResource("11_swgty")]

[node name="StatsUpdater" type="Node" parent="."]
script = ExtResource("19_4a02y")

[node name="PostProcessing" type="CanvasLayer" parent="."]

[node name="Pixelate" type="ColorRect" parent="PostProcessing"]
material = SubResource("ShaderMaterial_v23c5")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
